Add side-bar layout and style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,33 @@
 </head>
 <body>
     <div class="container">
+        
         <header class="header"></header>
-        <aside class="side-bar"></aside>
+        <aside class="side-bar">
+            <li>
+                <img src="./assets/img/dashboard_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Dashboard icon" style="height: 1.8rem;">
+                <h2>Dashboard</h2>
+            </li>
+
+            <nav>
+                <ul>
+                    <li><img src="./assets/img/home_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Home icon"><a href="#">Home</a></li>
+                    <li><img src="./assets/img/contact_mail_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Profile Icon"><a href="#">Profile</a></li>
+                    <li><img src="./assets/img/message.svg" alt="Message icon"><a href="#">Messages</a></li>
+                    <li><img src="./assets/img/clock.svg" alt="Clock icon"><a href="#">History</a></li>
+                    <li><img src="./assets/img/task_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Task icon"><a href="#">Tasks</a></li>
+                    <li><img src="./assets/img/diversity_4_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Community icon"><a href="#">Communities</a></li>
+                </ul>
+            </nav>    
+            
+            <nav>
+                <ul>
+                    <li><img src="./assets/img/settings_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Setting icon"><a href="#">Settings</a></li>
+                    <li><img src="./assets/img/contact_support_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Support icon"><a href="#">Support</a></li>
+                    <li><img src="./assets/img/verified_user_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt=""Privacy icon><a href="#">Privacy</a></li>
+                </ul>
+            </nav>
+        </aside>
         <main class="main"></main>
     </div>
 </body>
