Add header layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,33 @@
 <body>
     <div class="container">
         
-        <header class="header"></header>
+        <header class="header">
+            <div>
+                <div class="search">
+                    <label for="search-box">img</label>
+                    <input type="text" id="search-box" name="search-box">
+                </div>
+
+                <div>
+                    <span>img1</span>
+                    <span>img2</span>
+                    <span>Fabricio Blasich</span>
+                </div>
+            </div>
+            <div class="crud-proyect">
+                <div class="user-information">
+                    <span>img</span>
+                    <span>Hi there,</span>
+                    <span>Fabricio Blasich (@ArchivexBlasich)</span>
+                </div>
+
+                <div class="proyect-btns">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </header>
         <aside class="side-bar">
             <li>
                 <img src="./assets/img/dashboard_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Dashboard icon" style="height: 1.8rem;">
