Add header style

--- a/index.html
+++ b/index.html
@@ -12,24 +12,30 @@
         <header class="header">
             <div>
                 <div class="search">
-                    <label for="search-box">img</label>
+                    <label for="search-box"><img src="./assets/img/search_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Search icon"></label>
                     <input type="text" id="search-box" name="search-box">
                 </div>
 
                 <div>
-                    <span>img1</span>
-                    <span>img2</span>
+                    <img src="./assets/img/notifications_active_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Notification icon">
+                    <div class="circle user-image">
+                        <img src="./assets/img/santo.jpeg" alt="User image">
+                    </div>
                     <span>Fabricio Blasich</span>
                 </div>
             </div>
-            <div class="crud-proyect">
+            <div class="crud-project">
                 <div class="user-information">
-                    <span>img</span>
-                    <span>Hi there,</span>
-                    <span>Fabricio Blasich (@ArchivexBlasich)</span>
+                    <div class="circle user-image">
+                        <img src="./assets/img/santo.jpeg" alt="User image">
+                    </div>
+                    <p>
+                        <span>Hi there,</span><br>
+                        <span>Fabricio Blasich (@ArchivexBlasich)</span>
+                    </p>
                 </div>
 
-                <div class="proyect-btns">
+                <div class="project-btns">
                     <button>New</button>
                     <button>Upload</button>
                     <button>Share</button>
