Add main page your-project and announcements-trending columns a layout and style

--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
-        
+
         <header class="header">
             <div>
                 <div class="search">
-                    <label for="search-box"><img src="./assets/img/search_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Search icon"></label>
+                    <label for="search-box"><img src="./assets/img/search_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                            alt="Search icon"></label>
                     <input type="text" id="search-box" name="search-box">
                 </div>
 
                 <div>
-                    <img src="./assets/img/notifications_active_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Notification icon">
+                    <img src="./assets/img/notifications_active_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                        alt="Notification icon">
                     <div class="circle user-image">
                         <img src="./assets/img/santo.jpeg" alt="User image">
                     </div>
@@ -44,30 +48,179 @@
         </header>
         <aside class="side-bar">
             <li>
-                <img src="./assets/img/dashboard_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Dashboard icon" style="height: 1.8rem;">
+                <img src="./assets/img/dashboard_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Dashboard icon"
+                    style="height: 1.8rem;">
                 <h2>Dashboard</h2>
             </li>
 
             <nav>
                 <ul>
-                    <li><img src="./assets/img/home_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Home icon"><a href="#">Home</a></li>
-                    <li><img src="./assets/img/contact_mail_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Profile Icon"><a href="#">Profile</a></li>
+                    <li><img src="./assets/img/home_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Home icon"><a
+                            href="#">Home</a></li>
+                    <li><img src="./assets/img/contact_mail_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                            alt="Profile Icon"><a href="#">Profile</a></li>
                     <li><img src="./assets/img/message.svg" alt="Message icon"><a href="#">Messages</a></li>
                     <li><img src="./assets/img/clock.svg" alt="Clock icon"><a href="#">History</a></li>
-                    <li><img src="./assets/img/task_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Task icon"><a href="#">Tasks</a></li>
-                    <li><img src="./assets/img/diversity_4_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Community icon"><a href="#">Communities</a></li>
+                    <li><img src="./assets/img/task_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Task icon"><a
+                            href="#">Tasks</a></li>
+                    <li><img src="./assets/img/diversity_4_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                            alt="Community icon"><a href="#">Communities</a></li>
                 </ul>
-            </nav>    
-            
+            </nav>
+
             <nav>
                 <ul>
-                    <li><img src="./assets/img/settings_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Setting icon"><a href="#">Settings</a></li>
-                    <li><img src="./assets/img/contact_support_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Support icon"><a href="#">Support</a></li>
-                    <li><img src="./assets/img/verified_user_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt=""Privacy icon><a href="#">Privacy</a></li>
+                    <li><img src="./assets/img/settings_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                            alt="Setting icon"><a href="#">Settings</a></li>
+                    <li><img src="./assets/img/contact_support_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                            alt="Support icon"><a href="#">Support</a></li>
+                    <li><img src="./assets/img/verified_user_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="" Privacy
+                            icon><a href="#">Privacy</a></li>
                 </ul>
             </nav>
         </aside>
-        <main class="main"></main>
+        <main class="main">
+            <div class="your-project">
+                <h3>Your Projects</h3>
+                <div class="card-container">
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque libero perferendis aliquid
+                            voluptas asperiores natus eum commodi eos quos. Amet eius id nam repellat ex quaerat
+                            possimus nihil, optio blanditiis.</p>
+                        <div class="card-images">
+                            <img src="./assets/img/star_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Star icon">
+                            <img src="./assets/img/visibility_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Visibility icon">
+                            <img src="./assets/img/network_node_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Network icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Less Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur magni omnis velit
+                            architecto dolor nihil asperiores quo incidunt ipsam labore pariatur.</p>
+                        <div class="card-images">
+                            <img src="./assets/img/star_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Star icon">
+                            <img src="./assets/img/visibility_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Visibility icon">
+                            <img src="./assets/img/network_node_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Network icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Impossible app</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ducimus impedit hic? Amet numquam
+                            praesentium tempora ad ullam atque, rem nam quis, beatae distinctio ex dolore. Beatae
+                            voluptates accusantium culpa?</p>
+                        <div class="card-images">
+                            <img src="./assets/img/star_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Star icon">
+                            <img src="./assets/img/visibility_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Visibility icon">
+                            <img src="./assets/img/network_node_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Network icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Easy Peasy app</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias delectus ipsum aliquid,
+                            debitis illo quidem fuga incidunt perspiciatis, possimus maxime ut ratione. Excepturi vel
+                            dolores aliquam impedit expedita quos similique.</p>
+                        <div class="card-images">
+                            <img src="./assets/img/star_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Star icon">
+                            <img src="./assets/img/visibility_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Visibility icon">
+                            <img src="./assets/img/network_node_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Network icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Ad Blocker</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae quia possimus tempore sequi.
+                            Debitis ex, sunt velit quidem, unde et architecto provident ipsum quia modi, alias incidunt
+                            quae minima accusamus!</p>
+                        <div class="card-images">
+                            <img src="./assets/img/star_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Star icon">
+                            <img src="./assets/img/visibility_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Visibility icon">
+                            <img src="./assets/img/network_node_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Network icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Money Maker</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis autem exercitationem nobis
+                            quo natus sint nisi minus quae illo. Vitae nesciunt dolorem id dolores similique praesentium
+                            fuga accusantium consectetur labore.</p>
+                        <div class="card-images">
+                            <img src="./assets/img/star_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg" alt="Star icon">
+                            <img src="./assets/img/visibility_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Visibility icon">
+                            <img src="./assets/img/network_node_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg"
+                                alt="Network icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="announcements-trending">
+                <h3>Announcements</h3>
+                <div class="announcements">
+                    <div>
+                        <h4>Site Maintenance</h4>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    </div>
+                    <div>
+                        <h4>Community Share Day</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto hic repudiandae vitae.</p>
+                    </div>
+                    <div>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda velit rem laborum aperiam totam, laudantium dolorem laboriosam aut eveniet dignissimos sapiente ea vero maiores iste officiis eius, mollitia eos ducimus!</p>
+                    </div>
+                </div>
+                <h3>Trending</h3>
+                <div class="trending">
+                    <div>
+                        <div class="circle user-image">
+                            <img src="./assets/img/www.redbubble.com_shop_ap_29359631.png" alt="User image">
+                        </div>
+                        <div>
+                            <p><span>@tegan</span><br>
+                            World Peace Builder</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="circle user-image">
+                            <img src="./assets/img/cdn.pixabay.com_photo_2019_09_14_09_44_cat-4475583__340.png.png" alt="User image">
+                        </div>
+                        <div>
+                            <p><span>@TiaraBlx</span><br>
+                            Hermana de Fabricio</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="circle user-image">
+                            <img src="./assets/img/santo.jpeg" alt="User image">
+                        </div>
+                        <div>
+                            <p><span>@ArchivexBlasich</span><br>
+                            Criruja desde la cuna</p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="circle user-image">
+                            <img src="./assets/img/cdn.pixabay.com_photo_2020_08_14_09_12_penguin-5487301__480.png.png" alt="User image">
+                        </div>
+                        <div>
+                            <p><span>@Nestor Blasich</span><br>
+                            Pinguino Satacruz</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
+
 </html>
